--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,16 @@
     "wiki": "https://github.com/bantenprov/profil-kepegawaian/wiki"
   },
   "require": {
-    "php": ">=5.4.0",
-    "laravel/laravel": "5.4.*"
-  }
+        "php": ">=5.6.4",
+        "illuminate/support": "5.4.*"
+    },
+    "autoload": {
+        "files": [
+            "src/helpers/helpers.php"
+        ],
+        "psr-4": {
+            "Bantenprov\\ProfilKepegawaian\\": "src"
+        }
+    },
+    "minimum-stability": "stable"
 }
