--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "require": {
         "php": ">=5.6.4",
-        "illuminate/support": "5.4.*"
+        "illuminate/support": "5.4.*",
+        "laravelcollective/html": "^5.4.0",
     },
     "autoload": {
         "files": [
