--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
         "php": ">=5.6.4",
         "illuminate/support": "5.4.*",
-        "laravelcollective/html": "^5.4.0",
+        "laravelcollective/html": "^5.4.0"
     },
     "autoload": {
         "files": [
